Fix: Ad gap property to destinations class

--- a/public/main.css
+++ b/public/main.css
@@ -31,6 +31,7 @@ a:visited {
 .home .destinations {
   display: flex;
   justify-content: space-between;
+  gap: 16px;
 }
 
 /* Navigation */
@@ -160,24 +161,24 @@ a {
   margin-bottom: 15px;
 }
 /* Form */
-.form{
-  display:flex;
+.form {
+  display: flex;
   flex-direction: column;
-  max-width:400px;
+  max-width: 400px;
   margin: 0 auto;
 }
 
-.input{
+.input {
   border: 1px solid gray;
   padding: 10px;
-  margin-bottom:20px;
-  border-radius:5px;
+  margin-bottom: 20px;
+  border-radius: 5px;
 }
 
-.btn{
-  background-color:#2c3e50;
+.btn {
+  background-color: #2c3e50;
   color: white;
   padding: 10px;
   border-radius: 5px;
-  border:none;
+  border: none;
 }
